aiot project final

--- a/Semester 2/COMP7310 - Artificial intelligence of things/project/backend/templates/index.html
+++ b/Semester 2/COMP7310 - Artificial intelligence of things/project/backend/templates/index.html
@@ -75,7 +75,7 @@
             padding: 20px;
         }
         #messages { 
-            height: 200px; 
+            height: 400px; /* Increased from 200px to 400px */
             overflow-y: scroll; 
             border: 1px solid #e0e6ed; 
             padding: 10px;
